--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "clsx": "^2.1.1",
         "docusaurus-plugin-sass": "^0.2.5",
         "file-loader": "^6.2.0",
+        "gh-pages": "^6.2.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "sass": "^1.79.4",
